fix pardot form spacing

--- a/wp-content/themes/delivering-happiness/assets/css/pardot.css
+++ b/wp-content/themes/delivering-happiness/assets/css/pardot.css
@@ -144,7 +144,8 @@ form.form input.date {
 	line-height: 25px;
 	letter-spacing: -0.02em;	
 	padding-right: 3px;
-	min-width: 60px;
+	min-width: 71px;
+	float: left;
 }
 .service-request-form span.value{
 	display: block;
@@ -193,19 +194,28 @@ form.form input.date {
 	width: 50%;
 	clear: none;
 }
-.service-request-form .form-field.company, .service-request-form .form-field.phone, .service-request-form .form-field.last_name, .service-request-form .form-field.job_title.post-form-title{
+.service-request-form .form-field.phone, .service-request-form .form-field.last_name, .service-request-form .form-field.job_title.post-form-title{
+	text-align: right;
+}
+
+.service-request-form .form-field.company{
+	padding-left: 0;
 	text-align: right;
 }
 
 .service-request-form .form-field.first_name .text, .service-request-form .form-field.last_name .text, .service-request-form .form-field.email .text, .service-request-form .form-field.phone .text, .service-request-form .form-field.pd-number .text, .service-request-form .form-field.job_title.post-form-title .text{
-	width: 142px;
+	width: 135px;
+	float: left;
+}
+.service-request-form .form-field.job_title.post-form-title .text, .service-request-form .form-field.phone .text, .service-request-form .form-field.last_name .text{
+	float: right;
 }
 .service-request-form .form-field.city, .service-request-form .form-field.state, .service-request-form .form-field.country{
 	float: left;
 	clear: none;
 }
 .service-request-form .form-field.job_title .text, .service-request-form .form-field.company.post-engagement-company-field .text{
-	width: 357px;
+	width: 350px;
 	float: right;
 }
 .service-request-form .form-field.post-engagement-event-attend .select{
@@ -256,12 +266,12 @@ form.form input.date {
 	letter-spacing: 0;
 }
 .service-request-form .form-field.employees .select{
-	width: 142px;
+	width: 135px;
 	float: right;
 }
 .service-request-form .form-field.Importance_of_Employee_Happiness{
 	padding-top: 7px;
-	margin-bottom: 14px;
+	margin-bottom: 13px;
 }
 .service-request-form .form-field.Importance_of_Employee_Happiness .field-label, .service-request-form .form-field.Company_Culture_Pain_Point .field-label{
 	letter-spacing: -0.01em;
